<resources>
    <string name="app_name">Foody</string>
    <string name="repeat_password">repeat_password</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm Passowrd</string>
    <string name="sign_up">Register Now</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="LogIn">Log In</string>
    <string name="Username">Username</string>
    <string name="terms">Terms and Conditions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>