<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDBDB"
    tools:context=".LogInActivity">




    <ImageView
        android:layout_width="156dp"
        android:layout_height="164dp"
        android:layout_marginStart="229dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="524dp"
        android:background="@drawable/shape"
        android:foregroundGravity="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="117dp"
        android:layout_height="142dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="479dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="350dp"
        android:layout_height="406dp"
        android:background="@drawable/bck2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:text="Hello"
            android:textColor="#3E3D3D"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="Sign into your Account"
            android:textColor="#3E3D3D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit"
            android:drawableLeft="@drawable/mail"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:onClick="checkbox"
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#A3A3A3"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Remember me" />

            <androidx.appcompat.widget.AppCompatButton
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:clickable="true"
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_weight="0"
                android:background="@color/Transparent"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Forgot Password?" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logInButton"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button"
            android:text="@string/LogIn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#6C6A6A"
            android:progressBackgroundTint="#6C6A6A"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logInButton" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:buttonTint="#A3A3A3"
                android:maxLines="1"
                android:text="Don't have an account?" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:background="@color/Transparent"
                android:text="Sign Up" />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>